[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/Walls.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/Stage1/Dialogue.gd" type="Script" id=2]
[ext_resource path="res://scenes/text_interface_engine.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/player.tscn" type="PackedScene" id=4]
[ext_resource path="res://sprites/wall.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 20.9116, 18.5106 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 32.0847, 32.086 )

[node name="Stage1" type="Node2D" index="0"]

_sections_unfolded = [ "Visibility" ]

[node name="Walls" parent="." index="0" instance=ExtResource( 1 )]

tile_data = PoolIntArray( 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 15, 0, 0, 16, 0, 0, 17, 0, 0, 18, 0, 0, 19, 0, 0, 65536, 0, 0, 65543, 0, 0, 65544, 0, 0, 65551, 0, 0, 65552, 0, 0, 131072, 0, 0, 131079, 0, 0, 131080, 0, 0, 131087, 0, 0, 131088, 0, 0, 196608, 0, 0, 196611, 0, 0, 196612, 0, 0, 196615, 0, 0, 196616, 0, 0, 196619, 0, 0, 196620, 0, 0, 196623, 0, 0, 196624, 0, 0, 196627, 0, 0, 262144, 0, 0, 262147, 0, 0, 262148, 0, 0, 262155, 0, 0, 262156, 0, 0, 262163, 0, 0, 327680, 0, 0, 327683, 0, 0, 327684, 0, 0, 327691, 0, 0, 327692, 0, 0, 327699, 0, 0, 393216, 0, 0, 393217, 0, 0, 393218, 0, 0, 393219, 0, 0, 393220, 0, 0, 393221, 0, 0, 393222, 0, 0, 393223, 0, 0, 393224, 0, 0, 393225, 0, 0, 393226, 0, 0, 393227, 0, 0, 393228, 0, 0, 393229, 0, 0, 393230, 0, 0, 393231, 0, 0, 393232, 0, 0, 393233, 0, 0, 393234, 0, 0, 393235, 0, 0 )

[node name="Dialogue" type="Control" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 2 )

[node name="text_interface_engine" parent="Dialogue" index="0" instance=ExtResource( 3 )]

margin_left = 36.0
margin_top = 479.0
margin_right = 1209.0
margin_bottom = 594.0

[node name="Player" parent="Dialogue" index="1" instance=ExtResource( 4 )]

position = Vector2( 125.29, 344.661 )

[node name="Green" type="Area2D" parent="." index="2"]

position = Vector2( 128.754, 176.119 )
scale = Vector2( 2.39928, 1 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Green" index="0"]

position = Vector2( 0.0627213, 18.7117 )
shape = SubResource( 1 )

[node name="NPC" type="Sprite" parent="." index="3"]

modulate = Color( 0.24443, 0.570313, 0.233917, 1 )
position = Vector2( 94.3644, 105.293 )
scale = Vector2( 0.559185, 0.499761 )
texture = ExtResource( 5 )
_sections_unfolded = [ "Material", "Visibility" ]

[node name="StaticBody2D" type="StaticBody2D" parent="NPC" index="0"]

input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="NPC/StaticBody2D" index="0"]

position = Vector2( 0, 1.25616 )
scale = Vector2( 1, 1.03872 )
shape = SubResource( 2 )

[node name="NPC" type="Area2D" parent="NPC" index="1"]

position = Vector2( 82.8178, 41.4339 )
scale = Vector2( 1.75584, 2.00096 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="NPC/NPC" index="0"]

position = Vector2( -45.6717, -20.7275 )
shape = SubResource( 1 )

[connection signal="done" from="Dialogue" to="Dialogue/Player" method="_on_Dialogue_done"]

[connection signal="start" from="Dialogue" to="Dialogue/Player" method="_on_Dialogue_start"]

[connection signal="body_entered" from="Green" to="Dialogue" method="_on_Green_body_entered"]

[connection signal="body_entered" from="NPC/NPC" to="Dialogue" method="_on_NPC_body_entered"]


